# helper

./: Cargo.toml  README.md
assets/: screenshots.md
res/: documentation.toml
res/intro/: about  free-software  helper
res/package_managers/: apt  basics  dpkg
res/prog/: bash1
src/: config.rs  consts.rs  documentation.rs  main.rs  markdown.rs  tui.rs  ui.rs
src/tui/: documentation.rs  menu.rs  search.rs
src/ui/: documentation.rs  menu.rs  search.rs  service.rs
test/: documentation.toml
