[package]
name = "helper-tui"
version = "0.2.0"
edition = "2021"
description = "Простая программа для получения интерактивной справки по использованию команд Linux"
authors = ["Michail Krasnov <michail383krasnov@mail.ru>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/mskrasnov/helper"
repository = "https://github.com/mskrasnov/helper"
readme = "README.md"
keywords = ["cursive", "linux", "unix", "man", "help"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "z"

[dependencies]
anyhow = "1.0.90"
cursive = "0.21.1"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"

[features]
default = ["local-files"]
system-files = []
local-files = []
